Ukraine stuff part one

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -6108,12 +6108,12 @@ SAN_an_ADJ:0 "Indian"
  UKR_rc_DEF:0 "The Ukrainian Hetmanate"
  UKR_an:0 "Ukrainian Hetmanate"
  UKR_an_DEF:0 "The Ukrainian Hetmanate"
- UKR_cn:0 "Ukrainian Hetmanate"
- UKR_cn_DEF:0 "The Ukrainian Hetmanate"
- UKR_lb:0 "Ukrainian Hetmanate"
- UKR_lb_DEF:0 "The Ukrainian Hetmanate"
- UKR_ss:0 "Ukrainian Hetmanate"
- UKR_ss_DEF:0 "The Ukrainian Hetmanate"
+ UKR_cn:0 "Republic of Ukraine"
+ UKR_cn_DEF:0 "The Republic of Ukraine"
+ UKR_lb:0 "Republic of Ukraine"
+ UKR_lb_DEF:0 "The Republic of Ukraine"
+ UKR_ss:0 "Republic of Ukraine"
+ UKR_ss_DEF:0 "The Republic of Ukraine"
  UKR_jc:0 "Free Territory of Ukraine"
  UKR_jc_DEF:0 "The Free Territory of Ukraine"
  UKR_ni_ADJ:0 "Ukrainian"
@@ -8454,6 +8454,56 @@ SAN_an_ADJ:0 "Indian"
  CAM_ds_ADJ:0 "Khmer"
  CAM_cn_ADJ:0 "Khmer"
  CAM_an_ADJ:0 "Khmer"
+
+ MLR_ni:0 "Malorussia"
+ MLR_ni_DEF:0 "The Malorussian Republic"
+ MLR_ds:0 "Malorussia"
+ MLR_ds_DEF:0 "The Malorussian Republic"
+ MLR_rc:0 "Malorussia"
+ MLR_rc_DEF:0 "The Malorussian Republic"
+ MLR_an:0 "Malorussia"
+ MLR_an_DEF:0 "The Malorussian Republic"
+ MLR_cn:0 "Malorussia"
+ MLR_cn_DEF:0 "The Malorussian Republic"
+ MLR_lb:0 "Malorussia"
+ MLR_lb_DEF:0 "The Malorussian Republic"
+ MLR_ss:0 "Malorussia"
+ MLR_ss_DEF:0 "The Malorussian Republic"
+ MLR_jc:0 "Malorussia"
+ MLR_jc_DEF:0 "The Malorussian Republic"
+ MLR_ni_ADJ:0 "Malorussian"
+ MLR_rc_ADJ:0 "Malorussian"
+ MLR_lb_ADJ:0 "Malorussian"
+ MLR_ss_ADJ:0 "Malorussian"
+ MLR_jc_ADJ:0 "Malorussian"
+ MLR_ds_ADJ:0 "Malorussian"
+ MLR_cn_ADJ:0 "Malorussian"
+ MLR_an_ADJ:0 "Malorussian"
+
+ NKR_ni:0 "Nationalist Ukraine"
+ NKR_ni_DEF:0 "The Ukrainian Republic"
+ NKR_ds:0 "Nationalist Ukraine"
+ NKR_ds_DEF:0 "The Ukrainian Republic"
+ NKR_rc:0 "Nationalist Ukraine"
+ NKR_rc_DEF:0 "The Ukrainian Republic"
+ NKR_an:0 "Nationalist Ukraine"
+ NKR_an_DEF:0 "The Ukrainian Republic"
+ NKR_cn:0 "Nationalist Ukraine"
+ NKR_cn_DEF:0 "The Ukrainian Republic"
+ NKR_lb:0 "Nationalist Ukraine"
+ NKR_lb_DEF:0 "The Ukrainian Republic"
+ NKR_ss:0 "Nationalist Ukraine"
+ NKR_ss_DEF:0 "The Ukrainian Republic"
+ NKR_jc:0 "Nationalist Ukraine"
+ NKR_jc_DEF:0 "The Ukrainian Republic"
+ NKR_ni_ADJ:0 "Ukrainian"
+ NKR_rc_ADJ:0 "Ukrainian"
+ NKR_lb_ADJ:0 "Ukrainian"
+ NKR_ss_ADJ:0 "Ukrainian"
+ NKR_jc_ADJ:0 "Ukrainian"
+ NKR_ds_ADJ:0 "Ukrainian"
+ NKR_cn_ADJ:0 "Ukrainian"
+ NKR_an_ADJ:0 "Ukrainian"
 
 
 ###################################
