--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -778,6 +778,18 @@
   PBNews.197.d:0 "The conflict between Morocco and Spain has escalated.\n\nAfter the collape of the Mandate, the Spanish occupied the Ceuta Region intending to restore order and safeguard the Europeans there. Morocco has claimed the state as part of its country since decades and was outraged by the Spanish move, calling it a new attempt of Spanish colonialism. Both sides were not able to find a settlement diplomaticially and have begun mobilizing.\nWho will own the Rif? Where do Spanish Ambitions end?"
   PBNews.197.a:0 "Africa in Flames."
 
+  PBNews.198.t:0 "SPAIN WINS THE RIF WAR"
+  PBNews.198.d:0 "The Rif War is over and has ended in an absolute Spanish Victory.\n\nAfter the Spanish occupied the Ceuta Region, Morocco was outraged and soon war broke out.\nDespite Moroccon's Great Success in fighting the French and British in the last decades they were not able to overcome the Spanish Army. The Spanish condudcted a lightning war. They demolished the standing Moroccon Army and captured the cities and leadership in quick succession to avoid a partisan war.\n\nMorocco is once more a colony."
+  PBNews.198.a:0 "Spain returns to Greatness?"
+
+  PBNews.199.t:0 "MOROCCO WINS THE RIF WAR"
+  PBNews.199.d:0 "The Rif War is over and has ended in a spectacular Moroccon Victory.\n\nAfter the Spanish occupied the Ceuta Region, Morocco was outraged and soon war broke out.\nMorocco had modernized its army over the last decades to be equal to a European one and was able to stand its ground against the Spanish Army. The sides soon turned with the help of partisans complicating Spanish resupply. And soon the Spanish troops where ever fleeing or being overrun.\n\nSpain has suffered another disaster."
+  PBNews.199.a:0 "Morocco is truly expectional."
+
+  PBNews.200.t:0 "STALEMENT IN THE RIF WAR"
+  PBNews.200.d:0 "The Rif War has come to an end.\n\nAfter the Spanish occupied the Ceuta Region, Morocco was outraged and soon war broke out.\nHowever both Morocco and Spain were not able to break the resistance of their enemy. Spain was not able to coduct a successful invasion of the Moroccon heartland and Morocco could not take back Ceuta. After some months both sides came together to side an armistice.\n\nSpain now owns the Rif but is this truly the limit of Spanish Dominance?"
+  PBNews.200.a:0 "War is expensive for all sides."
+
   
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
