Ukraine stuff done

--- a/localisation/english/PB_Occupations_l_english.yml
+++ b/localisation/english/PB_Occupations_l_english.yml
@@ -380,6 +380,15 @@
   occupation.63.d:0 ""
   occupation.63.a:0 "Best of luck"
 
+  occupation.64.t:0 "Ukraine Dead"
+  occupation.64.d:0 ""
+  occupation.64.a:0 "Bruh"
+
+  occupation.65.t:0 "Collapse of the Ukrainian Republic"
+  occupation.65.d:0 "With the Ukrainian Civil War coming to a close and the League sponsered republic being defeated diplomats in Frankfurt have found it necessary to mount a league sponsored war to rid Ukraine of extremist elements. "
+  occupation.65.a:0 "Slava Ukraini"
+
+
   ##########################
   # COSMETIC TAGS
   ##########################
