Orbit Wars provisional work

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -347,59 +347,17 @@
   PB_ENG_Focus_Edwardian_Restoration_desc:0 "With time and re invigoration of the nation through the Edwards charisma and charm; The King Emperor has decided to restore democracy to the nation with elections occuring soon. King Edward VIII shall forever be known as the man who saved the nation and restored its sacred right of democracy with our guiding hand of course. Only those fit to rule may reign. God save the King and long may we reign."
 
 
-  PB_ENG_Path_to_Recovery:0 "Back to the Top"
-  PB_ENG_Path_to_Recovery_desc:0 "The British economy is the largest economy in the world however the recent woes to our industry has cost us and the Commonwealth dearly. All ready the Prime Minister has begun a series of economic reforms to bring the nations economy back to the top of the world." 
-  PB_ENG_Increase_Public_Spending:0 "Increase Public Spending"
-  PB_ENG_Increase_Public_Spending_desc:0 "The victory of the Workers Union Party has allowed for a new economic approach to Britain. All ready the Chancellor of the Exchequer has begun the creation of a new budget which will focus on increased government spending on the nation such as new health service for the country and many other things. Maybe this shall be a possible begining of the welfare state."
-  PB_ENG_Nationalization:0 "Nationalize Vital Industries"
-  PB_ENG_Nationalization_desc:0 "Certain industries such as water utilities and eletrical companies in Britain have gone bankrupt which has caused a panic across the general public. To prevent a crisis amongst our nation we shall nationalize these companies to protect the wellbeing of our citizens whilst also preventing any extortionate prices from their greedy owners."
-  PB_ENG_NHS:0 "National Health Commission"
-  PB_ENG_NHS_desc:0 "With many of Britains poorest in horendous conditions, the government has seen it necessary to form a commission to discuss the national health of our systems and ways to improve our populace health as a whole in a way which is not divided by class. All ready some are calling this commission to be a new force in Britain, a force which is calling for an establishment of a National Health System."
-  PB_ENG_Welfare_State:0 "A Welfare State"
-  PB_ENG_Welfare_State_desc:0 "With increased WUP intervention Britain has begun the transformation into a welfare state. No longer shall the working class of this country suffer; no longer shall the children of Britannia hunger; no longer shall the weak and feeble be ignored by the health system. Britain has been transformed from the ruins of privatisation to the new Jerusalem of the world."
+  PB_ENG_Path_to_Recovery:0 "The §OAutomation§! Crisis"
+  PB_ENG_Assess_Damage:0 "Assess the Damage"
+  PB_ENG_Audit_Economy:0 "Take Stock of Our Assets"
 
-  PB_ENG_Tackle_Homelessness:0 "The War on Homelessness"
-  PB_ENG_Tackle_Homelessness_desc:0 "Homelessness has skyrocketed since the slump, many of Britains poorest working class and even veterans of the Great War now sleep on benches and the streets from Aberdeen to London. With this crisis the Prime Minister has declared a war on Homelessness to tackle the problem whilst also trying to restore confidence in the British system."
-  PB_ENG_Tackle_Unemployment:0 "A Helping Hand"
-  PB_ENG_Tackle_Unemployment_desc:0 "To help the homelessness to find new jobs in the nation we shall give them a helping hand. This hand of work consits of making the jobless form construction and public work teams. These teams will then go all over the country modernising any old infrastructure and helping construction efforts. It pays modestly however for the working man it is better then nothing."
- 
-  PB_ENG_Company_Bailout:0 "Heavy Industry Bailout"
-  PB_ENG_Company_Bailout_desc:0 "The industries such as coal mining, shipbuilding, steel production and many other industrial institutions have been at the heart of the British economy for centuries however with the economic crisis these industries have either gone nearly or have gone bust which has threaten millions of jobs all around the country. To prevent this the government have decided to bailout these industries."
-  PB_ENG_Guide_Relief_Efforts:0 "Guide the Relief Effort"
-  PB_ENG_Guide_Relief_Efforts_desc:0 "Instead of directly pointing the direction of the British economy we shall instead guide the economy. This will allow entrepreneurs to build new firms and establishments and allow for a more flourishing market economy which will create new jobs and opportunities for the British public whilst also fitting state needs."
-  PB_ENG_Abandon_Gold_Standard:0 "Abandon the Gold Standard"
-  PB_ENG_Abandon_Gold_Standard_desc:0 "By allowing the Pound Stirling to be connected to the gold standard the entire British economy essentially collapsed as soon as the banks lost their confidence in the system. The Prime Minister has made the call to abandon the gold standard to prevent the catastrophe which was the Great Slump."
+  PB_ENG_Assess_Industrial_Sector:0 "The Future of Heavy Industry"
+  PB_ENG_Overturn_Edison_Automation:0 "Overturn the EIEC's Decision"
+  PB_ENG_Reinforce_Automation:0 "Automation is the Future"
 
-  PB_ENG_Restore_Confidence:0 "Restore Confidence in the Pound"
-  PB_ENG_Restore_Confidence_desc:0 "If the City of London was the heart of the British economy then the Pound Stirling would be the blood of the economy. With many financiers losing confidence in the Stirling the economy has come to halt with price changes and inflation occuring. To fix this problem the Prime Minister has begun an iniative to restore confidence in the Pound Stirling to allow the lifeblood of empire to come back to life."
-  PB_ENG_Imperial_Bank:0 "Establish the Imperial Bank"
-  PB_ENG_Imperial_Bank_desc:0 "The Bank of England rescued England at her darkest economic and military hour, now with government support the Imperial Bank shall also be established to rescue the United Kingdom from her darkest economic hour. With a centralised imperial banking system any economic inefficiency will be sorted straight out across the entire empire."
-  
-  PB_ENG_Loosen_Regulations:0 "Loosen Regulations"
-  PB_ENG_Loosen_Regulations_desc:0 "By loosening economic regulations we can give the banks and British businesses free reign to restructure and fix themselves whilst also granting us much need support from the economic sector, however these loosening of regulations will cause some controversy from working class men who might suffer from the loosening of regulations."
-  PB_ENG_Reinforce_Protectionism:0 "Reinforce Protectionism"
-  PB_ENG_Reinforce_Protectionism_desc:0 "The British economy relies mainly on exports and imports between the Empire and the Commonwealth due to the fact that if any foreign power gets a foot in the British economy the entire system would lose to foreign markets. To prevent this looming threat the government have decided on a more protectionist economy by putting import tariffs on foreign powers to protect our vitial industries." 
-  PB_ENG_Reform_Gold_Standard:0 "Adjust the Gold Standard"
-  PB_ENG_Reform_Gold_Standard_desc:0 "The gold standard may have failed us recently however it has held strong the British economy for three hundred years prior to that 'slight' hiccup. To prevent any economic confusion we shall keep the gold standard however adjust the ratio and power of the gold standard on the Pound Stirling allowing the Prime Minister to not have a heart attack when another economic problem occurs."
-  
-  PB_ENG_Establish_IRI:0 "Establish the IRI"
-  PB_ENG_Establish_IRI_desc:0 "The recent crisis and economic woes with political strife has left many parts of the United Kingdom abandoned and out of touch with modern British standards. To fix this problem the Imperial Reconstruction Initiative or IRI shall be created to help construct, modernise and forge a new modern British landscape which grant peace and stability across Britain."
-  PB_ENG_Control_Failed_Banks:0 "Control the Failed Banks"
-  PB_ENG_Control_Failed_Banks_desc:0 "Many banks have failed the British people such as the likes of the Bank of Scotland which controls our financial interests in Scotland and Northern Ireland. To prevent support for London we shall directly liquidate these banks and politically control them to secure our interests across the British Isles whether the people like it or not."
+  PB_ENG_Assess_High_Technology:0 "The High Technology Sector"
 
-  PB_ENG_Economic_Isolationism:0 "Economic Self Sufficiency"
-  PB_ENG_Economic_Isolationism_desc:0 "Britain as an island nation has a problem of relying financially and resource wise with the world which has caused the problem that if these supplies were to ever be cut off then the nation itself would fall. To solve this problem the new government have decreed a policy of self reliance and autarky to tackle this Achilles heel."
-  PB_ENG_State_Capitalism:0 "State Capitalism"
-  PB_ENG_State_Capitalism_desc:0 "To prevent hard earned government revenue being usurped from greedy profiteers we shall pursue a policy of state capitalism where the new government shall organise and run new and crucial businesses. This will allow the government to cash in on profits of the nation  however force ourselves to lose the expertise of the British businessman."
-  PB_ENG_Union_Busting:0 "Break the Unions"
-  PB_ENG_Union_Busting_desc:0 "The Unions will provides shelter for the radical socialists which are the dagger which threatens our cultural values. To prevent any red resistance to Britain and our rule we will break the unions which will be highly controversial but necessary to make sure we have complete power to create the best economic policies for Britain."
-  PB_ENG_Wage_Reductions:0 "The New Economy"
-  PB_ENG_Wage_Reductions_desc:0 "Our economic initiatives and transformation of a free market economy to a state economy has created a new British economy based on military construction and other needs based for our government. This has allowed us to create a stronger economy providing jobs at lower wages whilst also compelling the British economy forwards, a true economic miracles by our standards of course."
-
-  PB_ENG_Beginning_Recovery:0 "The Final Stages of Recovery"
-  PB_ENG_Beginning_Recovery_desc:0 "With economic reforms taking place our economy is heading towards the final stages of recovery from the economic slump. Confidence in the British system is slowly being restored and pre depression economic levels are returning. We can only pray to God that it stays this way."
-  PB_ENG_Full_Recovery:0 "Complete Recovery"
-  PB_ENG_Full_Recovery_desc:0 "After much needed reforms and progress the British economy has finally recovered from the Great Slump. Many citizens of Britain in a while are once again proud of our economic system has provided new job security and wages for the people; a luxury in the high days of the Crisis. With our finances fixed we can now focus on more pressing matters such as the state of the Empire and foreign affairs."
+  PB_ENG_Assess_Society:0 "The Social Impact"
 
   PB_ENG_1934_Imperial_Conference:0 "The 1934 Imperial Congress"
   PB_ENG_1934_Imperial_Conference_desc:0 "The 1934 Imperial Congress is the upcoming decision making for the Empire, already many advocates are calling for reform to the Imperial system. Many of the old guard have voices their opinions of direct rule from London, however citizens from the Commonwealth have called for Britain to lay down her mantle and allow the Commonwealth of nations take charge."
