fuck the interservice rivalry mechanic

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -49,7 +49,7 @@
 
   PB_Leader_Charles_Nogues_DESC:0 "§YBorn:§! 13/8/1876\n\n§YCharles Noguès§! was born into wealth. He was raised in a family owned estate in north-east Morocco for much of his childhood. Every week a new shipment of eager French colonists would arrive through the Spanish city of Melilla, here Mr. Noguès saw the rapid Francization of Africa along with all the new technologies the mainland could offer. Some called it civilization, others called it imperialism. Ironically by his late teens Mr. Noguès would take the very route many followed just to arrive to the place he called home for so long, he would establish himself in Paris and join the École Polytechnique and pursue military doctrinal studies before his entry into the army.\n\nWhen the Great War broke out Mr. Noguès specialized in armoured warfare and was an early proponent of landship utilization, spearheading Frances first Armoured Corp at the battle of Verdun; the results were simply to good to ignore. Even when the Treaty of Tours was signed secret efforts were being made to reverse engineer captured mechs, although the technology had be used against its creators general production knowledge was still unknown. "
 
-  PB_Leader_Claire_Chennault_DESC:0 "§YBorn:§! 6/9/1893\n\n§YClaire Chennault§!, nicknamed Old Leatherface, is an Franco-American by birth. Originating from Louisana he took an early interest in politics, subsequently joining the Commonwealth army at the age of 18. Being far too young to apply for Operation Overlord during the Great War he instead watched from the sidelines as brothers and fathers quickly applied for the so-called 'war to end all wars'.\n\nHe finally saw reputable service in Wallonia where he was stationed on the border with France, belonging to a joint Anglo-American expeditionary force. Around the late 20s the economic situation of Wallonia was looking quite depressing and with Britain refusing troops passage back to America because of the situation with France many Americans defected across the border. Only to be welcomed by an authoritarian government in need of experienced and disciplined soliders. In fact thousands of American defectors quickly found positions in law enforcement because of their non-French identity, the state believed that these foreigners would be more harsh then the typical French man and would lack any restraint in their duties. Either by gods good will or some archaic chance of luck Chennault finds himself leading a nation of that he wasn't even born in but never the less Chennault will give France his all just as she gave him a new life full of opportunity."
+  PB_Leader_Claire_Chennault_DESC:0 "§YBorn:§! 6/9/1893\n\n§YClaire Chennault§!, nicknamed Old Leatherface, is an Franco-American by birth. Originating from Louisana he took an early interest in politics, subsequently joining the Commonwealth army at the age of 18. Being far too young to apply for Operation Overlord during the Great War he instead watched from the sidelines as brothers and fathers quickly applied for the so-called 'war to end all wars'.\n\nHe finally saw reputable service in Wallonia where he was stationed on the border with France, belonging to a joint Anglo-American expeditionary force. Around the late 20s the economic situation of Wallonia was looking quite depressing and with Britain refusing troops passage back to America because of the situation with France many Americans defected across the border. Only to be welcomed by an authoritarian government in need of experienced and disciplined soliders. In fact thousands of American defectors quickly found positions in law enforcement because of their non-French identity, the state believed that these foreigners would be more harsh then the typical French man and would lack any restraint in their duties. Either by god’s good will or some anarchic chance of luck Chennault finds himself leading a nation of that he wasn't even born in but never the less Chennault will give France his all just as she gave him a new life full of opportunity."
 
   PB_Leader_Maxime_Weygand_DESC:0 ""
   
@@ -107,6 +107,8 @@
   FRA_SP_IN_POWER:0 "The SP are in power"
   FRA_MIL_IN_POWER:0 "The Military are in power"
   FRA_DISABLE_ALL_MECHANICS:0 "The Interservice Rivarly has come to an end"
+  FRA_Rivalry_Decision_SP_Active:0 "A decision to favour the SP has been taken"
+  FRA_Rivalry_Decision_MIL_Active:0 "A decision to favour the Military has been taken"
 
   ##########################
   # Factionalism/Nationalistic Fervour
@@ -1646,7 +1648,7 @@
 
   FRA_Rivalry_Charles_Nogues_Militarist:0 "§YCharles Noguès§! is the Current Leader of the Military Faction"
   FRA_Claire_Chennault_Militarists:0 "§YClaire Chennault§! is the Current Leader of the Military Faction"
-  FRA_Maxime_Weygand_Militarists_Militarist:0 "§YMaxime Weygand§! is the Current Leader of the Military Faction"
+  FRA_Maxime_Weygand_Militarists:0 "§YMaxime Weygand§! is the Current Leader of the Military Faction"
 
   FRA_Rivalry_FRA_Joseph_Darnand_SP:0 "§YJoseph Darnand§! is the Current Leader of the Sécurité Publique"
   FRA_Rivalry_FRA_Xavier_Vallat_SP:0 "§YXavier Vallat§! is the Current Leader of the Sécurité Publique"
