--- a/localisation/english/PB_buildings_l_english.yml
+++ b/localisation/english/PB_buildings_l_english.yml
@@ -29,7 +29,7 @@
  synthetic_refinery:0 "Synthetic Refinery"
  synthetic_refinery_plural:0 "Synthetic Refineries"
  #synthetic_refinery_desc:0 "This building provides the state with +1 £resources_strip|3 and +2 £resources_strip|1."
- synthetic_refinery_desc:0 "This building provides the state with"
+ synthetic_refinery_desc:0 "This building provides the state with additional"
  synthetic_refinery_amount:0 "$VALUE|Y0=$"
  synthetic_refinery_resource:0 "£resources_strip|$FRAME$"
  radar_station:0 "Radar Station"
@@ -42,7 +42,7 @@
  nuclear_reactor_plural:0 "Nuclear Reactors"
  nuclear_reactor_desc:0 "This building provides the state with production of enriched Uranium for use in Nuclear weapons."
  farm:0 "Agroponics Complex"
- farm_desc:0 "This building improves the food situation of the surrounding state, requiring some weekly manpower for upkeep but increasing overall population growth\n"
+ farm_desc:0 "This building improves the food situation of the surrounding state, granting additional agriculture resources."
  medical_center:0 "Medical Facilities"
  medical_center_desc:0 "This building improves the medical situation of the surrounding state, requiring some weekly manpower for upkeep but decreasing the experience units lose upon taking damage"
  research_center:0 "Research Campus"
@@ -50,7 +50,7 @@
  colonial_outpost:0 "Colonial Outpost"
  colonial_outpost_desc:0 "This building helps to recruit local forces for our cause, requiring some weekly manpower for staffing and upkeep but increasing local non core manpower."
  steel_mill:0 "Synthetic Mineral Fabricator"
- steel_mill_desc:0 "This building produces small amounts of synthetic mineral resources, specialized via technology research and requiring weekly manpower for upkeep.\n"
+ steel_mill_desc:0 "This building produces small amounts of synthetic mineral resources, specialized via technology research."
  rubber_plantation:0 "Rubber Plantation"
  rubber_plantation_desc:0 "This building produces rubber for the surrounding area, requiring some local manpower for staffing and upkeep.\n"
  forced_labour_camp:0 "Forced Labour Facilities"
