Lots of Politics fixes

--- a/localisation/english/PB_Portugal_l_english.yml
+++ b/localisation/english/PB_Portugal_l_english.yml
@@ -28,8 +28,8 @@ POR_PB_salazar_EM:0 "António de Oliveira Salazar"
   POR_ni_party:0 "MNS"
   POR_ds_party_long:0 "Dinastia Brigantina"
   POR_ds_party:0 "Brigantina"
-  POR_rc_party_long:0 "Movimento Nacional-Syndicalista"
-  POR_rc_party:0 "MNS"
+  POR_rc_party_long:0 "Movimento Fatamista"
+  POR_rc_party:0 "Fatamista"
   POR_an_party_long:0 "Liberais Independentes"
   POR_an_party:0 "LI"
   POR_cn_party_long:0 "Partido Democrata Cristão"
