Middle Eastern CoE events

--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -32,12 +32,17 @@
   Coe_get_topic_France:0 "§GFrance§!"
   Coe_get_topic_Spain:0 "§GSpain§!"
   Coe_get_topic_Italy:0 "§GItaly§!"
-  Coe_get_topic_Balkan:0 "§GThe Balkans§!"
+  Coe_get_topic_Portugal:0 "§GPortugal§!"
+  Coe_get_topic_Poland:0 "§GPoland§!"
+  Coe_get_topic_Baltics:0 "§GBaltics§!"
 
   Coe_no_current_proposal:0 "§gNo Current Proposal§!"
   Coe_get_proposal_dexter:0 "§YDexter Plan§! \n\nFrance's pre-war borders will be restored, with the exception of Pas de Calais going to Wallonia [WLA.GetFlag]. French industry will be directly divided and watched over by the main members of the League of Nations."
   Coe_get_proposal_schwarz:0 "§YSchwarz Proposal§! \n\nPre-war France will lose Pas de Calais to Wallonia [WLA.GetFlag]and will be divided into its four fundamental regions: Occitania [OCT.GetFlag], Burgundy [BRG.GetFlag], Normandy [NRM.GetFlag] and the Seine Region."
   Coe_get_proposal_francia:0 "§YProject \"Francia\"§! \n\nFrance [FRA.GetFlag]and Germany [GER.GetFlag] will unify under a single government, its capital located in Köln. Wallonia [WLA.GetFlag] receives Pas de Calais as reparation. §RNo war reparations can be expected from France if this plan is put in motion§!."
+  Coe_get_proposal_spr_restoration:0 "§YNew Regime Plan§! \n\nSpain [SPR.GetFlag]will be restored in full, sans the Basque country [BSQ.GetFlag]under the rule of a friendly monarchy."
+  Coe_get_proposal_spr_partition:0 "§YThe Madeira Compromise§! \n\nSpain [SPR.GetFlag]is divided vertically between two friendly monarchies, partitioning the country under British and German rule."
+  Coe_get_proposal_spr_buffer_partition:0 "§YBadajoz-Zaragoza Line§! \n\nSpain [SPR.GetFlag]is divided into spheres of influence, with Asturias falling under British control and Catalonia and Andalusia under German control. The remainder of Spain is forced to demilitarised and acts as a neutral buffer."
 
   Coe_get_changes_lorraine:0 "\n- Continued German [GER.GetFlag]occupation of Lorraine"
   Coe_get_changes_demilitarisation:0 "\n- Extensive demilitarisation of the French state"
@@ -132,6 +137,10 @@
   NRM_REPUBLIC:0 "Republic of Normandy"
   NRM_REPUBLIC_ADJ:0 "Normandian"
   NRM_REPUBLIC_DEF:0 "The Republic of Normandy"
+
+  SYR_TUR_Puppet:0 "Syrian Vilayet"
+  SYR_TUR_Puppet_ADJ:0 "Syrian"
+  SYR_TUR_Puppet_DEF:0 "The Ottoman Vilayet of Syria"  
 
   #Ideas
  
