Actually localized the goddamned culture map mode

--- a/localisation/english/PB_More_Mapmodes_l_english.yml
+++ b/localisation/english/PB_More_Mapmodes_l_english.yml
@@ -11,6 +11,10 @@ MAPMODE_MILITARY_MAP_MODE_NAME:0 "Military"
 MAPMODE_MILITARY_MAP_MODE:0 "§YMilitary Progress map mode§!"
 MAPMODE_MILITARY_MAP_MODE_DESCRIPTION:0 "Displays the progress towards a §Ymodern military§!."
 
+MAPMODE_CULTURE_MAP_MODE_NAME:0 "Culture" 
+MAPMODE_CULTURE_MAP_MODE:0 "§YCulture map mode§!"
+MAPMODE_CULTURE_MAP_MODE_DESCRIPTION:0 "Displays the selected state's §Ymajority culture§!."
+
 civilization_map_mode_tooltip:0 "[From.Controller.get_civilization_level]"
 get_uncivilized_nation:0 "[From.Controller.GetNameWithFlag] is considered §RUncivilized§!."
 get_partially_westernized:0 "[From.Controller.GetNameWithFlag] is considered §YPartially Westernized§!."
