--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -4824,21 +4824,21 @@ SAN_an_ADJ:0 "Indian"
  MRT_an_ADJ:0 "Mauritanian"
 
  SEN_ni:0 "Wolofia"
- SEN_ni_DEF:0 "The Warirors of Wolofia"
+ SEN_ni_DEF:0 "The Wolof Republic"
  SEN_ds:0 "Wolofia"
- SEN_ds_DEF:0 "The Warirors of Wolofia"
+ SEN_ds_DEF:0 "The Wolof Republic"
  SEN_rc:0 "Wolofia"
- SEN_rc_DEF:0 "The Warirors of Wolofia"
+ SEN_rc_DEF:0 "The Wolof Republic"
  SEN_an:0 "Wolofia"
- SEN_an_DEF:0 "The Warirors of Wolofia"
+ SEN_an_DEF:0 "The Wolof Republic"
  SEN_cn:0 "Wolofia"
- SEN_cn_DEF:0 "The Warirors of Wolofia"
+ SEN_cn_DEF:0 "The Wolof Republic"
  SEN_lb:0 "Wolofia"
- SEN_lb_DEF:0 "The Warirors of Wolofia"
+ SEN_lb_DEF:0 "The Wolof Republic"
  SEN_ss:0 "Wolofia"
- SEN_ss_DEF:0 "The Warirors of Wolofia"
+ SEN_ss_DEF:0 "The Wolof Republic"
  SEN_jc:0 "Wolofia"
- SEN_jc_DEF:0 "The Warirors of Wolofia"
+ SEN_jc_DEF:0 "The Wolof Republic"
  SEN_ni_ADJ:0 "Wolofian"
  SEN_rc_ADJ:0 "Wolofian"
  SEN_lb_ADJ:0 "Wolofian"
