Adjustments and Fixes

--- a/localisation/english/PB_Algeria_Uprising_l_english.yml
+++ b/localisation/english/PB_Algeria_Uprising_l_english.yml
@@ -53,3 +53,8 @@ magman.10.t:0 "Exploiting Morroco's Misfortune?"
 magman.10.d:0 "Spain has taken Casablanca and seems like that the rest of Moroccon Resistance will soon crumcle. Their army is broken and there not even border guards on the few posts in the south.\n\nPoliticians are now demanding that we take the oppurtunity of this situation and take control of Rio de Oro and Reguibat. If Spain takes over all of Morocco they would at the doors of New Alexandria, a risk we can not really take.\n\nHowever 13 Years ago we guarenteed the current borders of Morocco after the brutal war in Morocco and promised to respect them. Should we not rather send more support to Morocco?"
 magman.10.a:0 "The Spanish can not control these lands!"
 magman.10.b:0 "We should rather support Morocco in their fight."
+
+############## Ideas
+
+PB_Idea_ALG_Revolution_Spirit:0 "War of Salvation"
+PB_Idea_FRG_French_Help:0 "French Military Mission"
