CoE Spain, Italy and Balkan outcomes

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -3379,3 +3379,31 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   ADR_Andorra_ds_ADJ:0 "Andorran"
   ADR_Andorra_cn_ADJ:0 "Andorran"
   ADR_Andorra_an_ADJ:0 "Andorran"
+
+  IST_North_Italy:0 "Kingdom of Val Padana"
+  IST_North_Italy_DEF:0 "The Kingdom of Val Padana"
+  IST_North_Italy_ADJ:0 "Val Padanian" 
+
+  CAT_Aragon:0 "Kingdom of Aragon"
+  CAT_Aragon_DEF:0 "The Kingdom of Aragon"
+  CAT_Aragon_ADJ:0 "Aragonese" 
+
+  AUR_Castille:0 "Kingdom of Castile"
+  AUR_Castille_DEF:0 "The Kingdom of Castile"
+  AUR_Castille_ADJ:0 "Castilian" 
+
+  ADL_Kingdom:0 "Kingdom of Andalusia"
+  ADL_Kingdom_DEF:0 "The Kingdom of Andalusia"
+  ADL_Kingdom_ADJ:0 "Andalusian" 
+
+  ITA_Two_Sicilies:0 "Kingdom of Two Sicilies"
+  ITA_Two_Sicilies_DEF:0 "The Royal Realm of Two Sicilies"
+  ITA_Two_Sicilies_ADJ:0 "Sicilian" 
+
+  CRO_Dinaric_Federation:0 "Dinaric Kingdom"
+  CRO_Dinaric_Federation_DEF:0 "The Dinaric Federal Kingdom"
+  CRO_Dinaric_Federation_ADJ:0 "Dinaric"
+
+  SER_Smaller_Serbia:0 "Serbia"
+  SER_Smaller_Serbia_DEF:0 "Serbia"
+  SER_Smaller_Serbia_ADJ:0 "Serbian" 
