--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8505,6 +8505,29 @@ SAN_an_ADJ:0 "Indian"
  NKR_cn_ADJ:0 "Ukrainian"
  NKR_an_ADJ:0 "Ukrainian"
 
+ AUR_ni:0 "State of Asturias"
+ AUR_ni_DEF:0 "The State of Asturias"
+ AUR_ds:0 "Kingdom of Asturias"
+ AUR_ds_DEF:0 "The Kingdom of Asturias"
+ AUR_rc:0 "Kingdom of Asturias"
+ AUR_rc_DEF:0 "The Kingdom of Asturias"
+ AUR_cn:0 "Kingdom of Asturias"
+ AUR_cn_DEF:0 "The Kingdom of Asturias"
+ AUR_lb:0 "Kingdom of Asturias"
+ AUR_lb_DEF:0 "The Kingdom of Asturias"
+ AUR_ss:0 "Kingdom of Asturias"
+ AUR_ss_DEF:0 "The Kingdom of Asturias"
+ AUR_jc:0 "Republic of Asturias"
+ AUR_jc_DEF:0 "The Popular Republic of Asturias"
+ AUR_ADJ:0 "Asturian" 
+
+ GAL:0 "Galicia"
+ GAL_DEF:0 "Galicia"
+ GAL_ADJ:0 "Galician"
+
+ SRD:0 "Sardinia"
+ SRD_DEF:0 "Sardinia"
+ SRD_ADJ:0 "Sardinian" 
 
 ###################################
 # TEMPLATE
