Imagine Schokostreusel on Bread

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -865,3 +865,5 @@
  VICTORY_POINTS_12038:0 "Almería"
  VICTORY_POINTS_1176:0 "Granada"
  VICTORY_POINTS_3945:0 "Cuenca"
+ VICTORY_POINTS_9335:0 "Groningen"
+ VICTORY_POINTS_3262:0 "Tilburg"
