--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -150,7 +150,7 @@ PB_Culture_Suriname_tt:0 "Surinamese"
 # CENTRAL AMERICA #
 
 PB_Culture_Belizean_tt:0 "Belizean"
-PB_Culture_Costa_Colombian_tt:0 "Costa-Colombian"
+PB_Culture_Costa_Colombian_tt:0 "C. Colombian"
 PB_Culture_Guatemalan_tt:0 "Guatemalan"
 PB_Culture_Honduran_tt:0 "Honduran"
 PB_Culture_Nicaraguan_tt:0 "Nicaraguan"
@@ -176,6 +176,7 @@ PB_Culture_Yucatec_tt:0 "Yucatec"
 PB_Culture_Puerto_Rican_tt:0 "Puerto Rican"
 PB_Culture_Haitian_tt:0 "Haitian"
 PB_Culture_Cuban_tt:0 "Cuban"
+PB_Culture_Caribbean_tt:0 "Caribbean"
 
 # MIDDLE EAST #
 
@@ -187,6 +188,7 @@ PB_Culture_Shia_Arab_tt:0 "Shia Arab"
 PB_Culture_Sunni_Arab_tt:0 "Sunni Arab"
 PB_Culture_Yemen_tt:0 "Yemen"
 PB_Culture_Omani_tt:0 "Omani"
+PB_Culture_Lebanese_tt:0 "Lebanese"
 
 # NORTH AFRICAN #
 
@@ -290,6 +292,13 @@ PB_Culture_Papuan_tt:0 "Papuan"
 PB_Culture_Hawaiian_tt:0 "Hawaiian"
 PB_Culture_Micronesian_tt:0 "Micronesian"
 PB_Culture_Euro_Asiatic_tt:0 "Euro-Asiatic"
+
+# CHINA #
+
+PB_Culture_Manchu_tt:0 "Manchu"
+PB_Culture_Mongolian_tt:0 "Mongolian"
+PB_Culture_Tibetan_tt:0 "Tibetan"
+
 
 ## -------- Expanded Lore -------- ##
 
@@ -468,6 +477,7 @@ PB_Culture_Yucatec_tt_delayed:0 ""
 PB_Culture_Puerto_Rican_tt_delayed:0 ""
 PB_Culture_Haitian_tt_delayed:0 ""
 PB_Culture_Cuban_tt_delayed:0 ""
+PB_Culture_Caribbean_tt_delayed:0 ""
 
 # MIDDLE EAST #
 
@@ -479,6 +489,7 @@ PB_Culture_Shia_Arab_tt_delayed:0 ""
 PB_Culture_Sunni_Arab_tt_delayed:0 ""
 PB_Culture_Yemen_tt_delayed:0 ""
 PB_Culture_Omani_tt_delayed:0 ""
+PB_Culture_Lebanese_tt_delayed:0 ""
 
 # NORTH AFRICAN #
 
@@ -539,3 +550,9 @@ PB_Culture_Papuan_tt_delayed:0 ""
 PB_Culture_Hawaiian_tt_delayed:0 ""
 PB_Culture_Micronesian_tt_delayed:0 ""
 PB_Culture_Euro_Asiatic_tt_delayed:0 ""
+
+# CHINA #
+
+PB_Culture_Manchu_tt_delayed:0 "Manchu"
+PB_Culture_Mongolian_tt_delayed:0 "Mongolian"
+PB_Culture_Tibetan_tt_delayed:0 "Tibetan"
