--- a/localisation/english/PB_Warcrimes_l_english.yml
+++ b/localisation/english/PB_Warcrimes_l_english.yml
@@ -124,3 +124,6 @@
 
   Bioeapons_tt:0 "§PDeploy Biological Weapons§!"
   Bioweapons_tt_delayed:0 "Selecting this will deploy our current biological stockpile on this state, affecting it for approximately §YThree Months§!.\n\n§RWARNING§!\nBiological Weapons can spread to neighboring provinces, including your own. Once you've released an engineered virus on the world, it is beyond your control.\n\n§RGerms do not recognize national borders.§!"
+
+  Livewire_tt:0 "§RDeploy Livewire§!"
+  Livewire_tt_delayed:0 "Selecting this will deploy our current stockpile of Livewires on this state, affecting it for approximately §YHalf a Year§!"
