--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -309,6 +309,13 @@ PB_Culture_Han_tt:0 "Han"
 PB_Culture_Expanded_Lore_tt:0 "This state's majority culture is: §Y[get_PB_Culture_Loc]§!"
 PB_Culture_Expanded_Lore_tt_delayed:0 "[get_PB_Culture_Loc_Delayed]"
 
+PB_Culture_Main_tt:0 "§GAccepted Cultures§!"
+PB_Culture_Main_tt_delayed:0 "Some description about accepted cultures"
+
+PB_Culture_Pol_tt:0 "[PB_Main_or_Accepted]"
+PB_Culture_Main_Culture_tt:0 "§Y[PB_Accepted_Cultures]§! is [ROOT.GetNameDef]'s §Cmain culture§!"
+PB_Culture_Accepted_Culture_tt:0 "§Y[PB_Accepted_Cultures]§! is considered an §Gaccepted culture§! in [ROOT.GetNameDef]."
+
 # BRITAIN #
 
 PB_Culture_English_tt_delayed:0 "The English culture reaches from the cold skies of the British Isles to the almost blizzard like terrain of the north American winter lands, to the artificial lakes of Africa and beyond it seems nowhere in the world is there not at least one fine English gentleman parading across the street. While English culture has remained largely true to its early 19th century form noticeable changes have emerged. Namely the quick progression into more liberalistic beliefs, and a strange yet captivating interest into indoor domestic life; this can be attributed to the beginnings of the multilevel structure of London that has slowly spread across the English countryside. If one was to define the modern English man in only a few words, then there would be none better to choose from than civilized and sophisticated."
