Primary/Accepted Cultures for various nations

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -310,7 +310,7 @@ PB_Culture_Expanded_Lore_tt:0 "This state's majority culture is: §Y[get_PB_Cult
 PB_Culture_Expanded_Lore_tt_delayed:0 "[get_PB_Culture_Loc_Delayed]"
 
 PB_Culture_Main_tt:0 "§GAccepted Cultures§!"
-PB_Culture_Main_tt_delayed:0 "Some description about accepted cultures"
+PB_Culture_Main_tt_delayed:0 "Accepted Cultures are cultures that incur no state penalty, whereas foreign cultures will give their respective state a small debuff alongside any non-core debuffs. Although rare there may be instances when a core state still contains a foreign culture, if this is the case then the state debuff will still apply. The proccess of converting or accepting a culture is done through the state gui, there may also be instances where focus, decision, or event effects will change the culture of a state."
 
 PB_Culture_Pol_tt:0 "[PB_Main_or_Accepted]"
 PB_Culture_Main_Culture_tt:0 "§Y[PB_Accepted_Cultures]§! is [ROOT.GetNameDef]'s §Cmain culture§!"
