Culture gui work

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -1,5 +1,13 @@
 ﻿l_english:
 
+## -------- Culture Conversion Tooltips -------- ##
+
+PB_Culture_Bar_Blank_tt:0 "Culture Conversion/Acceptance Progress: §Y[?PB_Culture_Conversion_variable]%§!"
+PB_Culture_Bar_Blank_tt_delayed:0 "To begin the process of culture conversion/acceptance please choose one of the buttons below."
+
+
+## -------- Culture Map Mode -------- ##
+
 culture_map_mode:0 "Culture Map"
 
 ## -------- Simple View -------- ##
