North America Map Work

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -374,7 +374,7 @@
  STATE_373:0 "Missouri"
  STATE_374:0 "Oclehumme"
  STATE_375:1 "West Texas"
- STATE_376:0 "Paeyokona"
+ STATE_376:0 "Kiowa"
  STATE_377:0 "Apacheria"
  STATE_378:0 "California Central"
  STATE_379:0 "San Francisco"
